removed path param
